# diskdoc

./: .gitignore  .release-please-config.json  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GETTING_STARTED.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  deny.toml  release-please-config.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deny.yml  release.yml
.hooks/: install.sh  pre-commit
_docs/intial-iteration/: architecture.md  prd.md
src/: event.rs  lib.rs  main.rs  utils.rs
src/application/: app.rs
src/domain/: entities.rs  ports.rs
src/infrastructure/: cleaner.rs  docker.rs  mod.rs
src/infrastructure/scanner/: heuristics.rs  mod.rs  walker.rs
src/interface/: mod.rs
src/interface/tui/: dashboard.rs  mod.rs  theme.rs  widgets.rs
tests/: app_tests.rs  cleaner_tests.rs  dashboard_tests.rs  heuristics_tests.rs  navigation_tests.rs  scanner_tests.rs  test_utils.rs  utils_tests.rs
