[package]
name = "diskdoc"
version = "0.1.0"
edition = "2021"
authors = ["DiskDoctor Contributors"]
description = "Interactive disk usage analyzer and cleaner"

[dependencies]
ratatui = "0.26"
crossterm = "0.29"
clap = { version = "4.5", features = ["derive"] }
jwalk = "0.8"
sysinfo = "0.30"
human_bytes = "0.4"
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.37", features = ["full"] }
log = "0.4"
env_logger = "0.11"
